css/style.css
/* UTILITIES */

:root {
    --blue:#051E34;
    --light-blue:#1B72E8;
}

#app {
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow: hidden;
}

/* NAVBAR */

nav {
    height: 70px;
}

.mobile-logo {
    height: 40px;
}

/* SIDEBAR */

.sidebar {
    overflow: hidden;
    background-color: var(--blue);
    background-image: url(../img/sidebar-bg.png);
    flex-shrink: 0;
    flex-direction: column;
    justify-content: space-between;
}

.list-sidebar {
    width: 150px;
}

.menu-sidebar {
    display: flex;
    align-items: center;
    color: white;
    padding: 10px;
}

/* MAIN CONTENT */

main {
    overflow-y: auto;
}

.bg-lightblue {
    background-color: var(--light-blue);
}

.student {
    line-height: 2.5rem;
    height: 100%;
}

.bg-blue-badge {
    background-color: #165BBA;
}

/* OFFCANVAS */

.offcanvas {
    color: black;
}

#table-row th[scope="row"] {
    line-height: 10px;
    vertical-align: middle;
}

#table-row {
    text-align: left;
}

/* CARD */

#card-faq .accordion-button:focus {
    box-shadow: none;
    background-color: transparent;
}

/* DEBUG */

.debug body {
    background-color: lightcoral;
    overflow-y: auto;
}

.debug .container {
    border: 1px solid red;
}

.debug .row {
    border: 1px solid blue;
}

.debug [class^='col'] {
    border: 1px solid green;
}

.debug .sidebar {
    background-color: var(--blue);
}

